推薦を色で表現

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
     <button id="displayCost1">在院日数</button>
     <button id="displayCost2">費用</button>
     <p><button id="clearButton">全ての詳細情報の非表示</button></p>
+    <!-- <button id="changeRecommend">推薦OFF</button> -->
+    <div id="buttons"></div>
     <!-- <script src="index.js"></script> -->
   </body>
 </html>
