時間間隔を考慮

--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
     <p id="chart"></p>
     <h2>Clinical Pathways</h2>
     <h3>操作</h3>
-    <p>オーダーダブルクリック : 詳細情報の表示</p>
-    <p>オーダークリック : 詳細情報の非表示</p>
-    <p>安全性</p>
+    <!-- <p>オーダーダブルクリック : 詳細情報の表示</p> -->
+    <p>オーダークリック : 詳細情報の非表示/非表示</p>
+    <!-- <p>安全性</p>
     <button id="displayRisk1">併発症発生リスク</button>
     <button id="displayRisk2">重篤度を考慮したリスク</button>
     <p>効率性</p>
     <button id="displayCost1">在院日数</button>
     <button id="displayCost2">費用</button>
-    <p><button id="clearButton">全ての詳細情報の非表示</button></p>
+    <p><button id="clearButton">全ての詳細情報の非表示</button></p> -->
     <!-- <button id="changeRecommend">推薦OFF</button> -->
     <div id="buttons"></div>
     <!-- <script src="index.js"></script> -->
