--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <button id="displayCost2">費用</button>
     <p><button id="clearButton">全ての詳細情報の非表示</button></p> -->
     <!-- <button id="changeRecommend">推薦OFF</button> -->
-    <div id="buttons"></div>
+    <!-- <div id="buttons"></div> -->
     <!-- <script src="index.js"></script> -->
   </body>
 </html>
