出現率の切替えを可能に

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <button id="displayCost2">費用</button>
     <p><button id="clearButton">全ての詳細情報の非表示</button></p> -->
     <!-- <button id="changeRecommend">推薦OFF</button> -->
+    <button id="changeFrequency">分岐に対応する患者中の出現率を表示</button>
     <!-- <div id="buttons"></div> -->
     <!-- <script src="index.js"></script> -->
   </body>
